<package>
  <name>bwi_mapper</name>
  <version>0.2.3</version>
  <description>
    Mapping package that provides utilties for handling ROS 
    style maps. Also provides functions for generating topological graphs from 
    pixel maps.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/bwi_common</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_common/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>opencv2</run_depend>

</package>
