<package format="2">
  <name>bwi_mapper</name>
  <version>0.3.5</version>
  <description>
    Mapping package that provides utilties for handling ROS 
    style maps. Also provides functions for generating topological graphs from 
    pixel maps.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/bwi_common</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_common/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>map_server</depend>
  <depend>nav_msgs</depend>
  <depend>yaml-cpp</depend>

</package>
