<?xml version="1.0"?>
<package format="2">
  <name>bwi_msgs</name>
  <version>0.3.5</version>
  <description>
    Contails messages used in the utexas-bwi codebase.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_msgs</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_apps</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_apps/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>actionlib_msgs</depend>
  <depend>bwi_planning_common</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>

</package>
